<resources>
    <array name="week_array">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>

    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">LOG IN</string>

    <string name="company_name">@CBOT Solutions Pvt Lmt </string>

    <string name="app_name">SrtTata</string>
    <string name="dismiss">Dismiss</string>
    <string name="message">message</string>
    <string name="salaried">SALARIED</string>
    <string name="remarks">Remarks :</string>
    <string name="alternate_number">Alternate number</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confiem_password">Confirm password</string>
    <string name="token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyTmFtZSI6ImNib3RzIiwiZW1haWwiOiJyYW1lc2guYkBjYm90c29sdXRpb25zLmNvbSIsIm5hbWUiOiJjYm90cyIsIm1vYmlsZSI6OTYxMTI0MDg2NiwiaWF0IjoxNTgxNjUzODk4fQ.CEdhYuuc2QC6DWAERahpjVMLF5tVpGvIcdqyEg0umJw</string>
    <string name="pan_number_pattern">[A-Z]{5}[0-9]{4}[A-Z]{1}</string>
</resources>
