<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="2"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">


    <RelativeLayout

        android:background="@drawable/radious"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:layout_weight="0.2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView

                    android:src="@drawable/srt_logo"
                    android:layout_width="160dp"
                    android:layout_height="50dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="0.5"
                android:weightSum="2"

                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:orientation="vertical"

                    android:gravity="center"
                    android:layout_weight="1.3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        app:cardCornerRadius="6dp"
                        app:cardBackgroundColor="@color/smoke"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"

                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="50dp"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:gravity="center"
                                android:id="@+id/userName"
                                android:lines="1"
                                android:singleLine="true"
                                android:paddingBottom="10dp"
                                android:background="@null"
                                android:hint="@string/username"
                                android:layout_height="match_parent"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="6dp"
                        app:cardBackgroundColor="@color/smoke"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"

                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="50dp"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:id="@+id/password"
                                android:gravity="center"
                                android:paddingBottom="10dp"
                                android:background="@null"
                                android:lines="1"
                                android:singleLine="true"
                                android:inputType="textPassword"
                                android:hint="@string/password"
                                android:layout_height="match_parent"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        app:cardCornerRadius="8dp"
                        android:id="@+id/logIn"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="@color/light_blues"
                        android:layout_width="100dp"
                        android:layout_height="36dp">


                        <TextView
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:text="@string/log_in"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>


                    </androidx.cardview.widget.CardView>
                </LinearLayout>



            </LinearLayout>



        </LinearLayout>


        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <View
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <TextView
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/company_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>