<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".config.ChangePassword">

    <androidx.appcompat.widget.Toolbar
        app:title="Password change"
        android:id="@+id/changePasswordTool"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/smoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="50dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:id="@+id/oldPaswsword"
                    android:lines="1"
                    android:singleLine="true"
                    android:paddingBottom="10dp"
                    android:background="@null"
                    android:hint="@string/old_password"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/smoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="50dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:id="@+id/newPassword"
                    android:lines="1"
                    android:singleLine="true"
                    android:paddingBottom="10dp"
                    android:background="@null"
                    android:hint="@string/new_password"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/smoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:id="@+id/reEnterPassword"
                    android:lines="1"
                    android:singleLine="true"
                    android:paddingBottom="10dp"
                    android:background="@null"
                    android:hint="@string/confiem_password"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:id="@+id/updatePass"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/light_blues"
        android:layout_width="140dp"
        android:layout_height="40dp">

        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="17dp"
            android:text="Update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </androidx.cardview.widget.CardView>

</LinearLayout>